[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stripe = {version = "0.38", features = ["runtime-tokio-hyper"]}
tokio = { version = "1.39", features = ["full"] }
dotenv = "0.15.0"
actix-web = "4.8.0"
serde = { version = "1.0", features = ["derive"] }
actix-cors = "0.7.0"